# amazon-catalog-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  catalog_cli.py  pyproject.toml  requirements.txt  setup.py
catalog/: __init__.py  cli.py  output.py  parser.py  query_engine.py
catalog/core/: __init__.py  engine.py  models.py  parser.py  query_engine.py  schema.py  seller_central.py  validation.py
catalog/queries/: __init__.py  bullet_validation.py  char_validation.py  hijacking_detection.py  missing_attributes.py  rufus_bullets.py  title_checks.py  variation_check.py
catalog/surfaces/: __init__.py  cli.py  mcp.py
site/: index.html  style.css
tests/: test_cli.py  test_mcp.py  test_missing_attributes.py  test_models.py  test_schema.py  test_seller_central.py  test_title_checks.py  test_validation.py
